# bootstrap-python

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
bootstrap_python/: __main__.py  program.py  save_records.py
